# Galactic_Unicorn

./: .gitmodules  CMakeLists.txt  Color.hpp  Element.hpp  Genshin.cpp  Genshin.h  Genshin.hpp  Pixel.h  README.md  Sequence.cpp  Sequence.hpp  main.cpp  pimoroni_pico_import.cmake
images/: Anemo.txt  Dendro.txt  Electro.txt  Pyro.txt
